@@ -15,7 +15,8 @@
 {% block content %}
     {% trans "groups" as groups_str %}
     {% trans "Add a group" as add_a_group_str %}
-    {% include "wagtailadmin/shared/header.html" with title=groups_str add_link="wagtailusers_groups:add" add_text=add_a_group_str icon="group" search_url="wagtailusers_groups:index" %}
+    {% url "wagtailusers_groups:add" as add_link %}
+    {% include "wagtailadmin/shared/header.html" with title=groups_str action_url=add_link action_text=add_a_group_str icon="group" search_url="wagtailusers_groups:index" %}
 
     <div class="nice-padding">
         <div id="group-results" class="groups">
